SERVER-66067 Transaction API's best-effort abort can interfere with two-phase commit

(cherry picked from commit a9397139b77d5ca57c3b333a0b4177fc2c26d123)